sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:14: error: not found: value ech
  }while (ech==true)
          ^